[package]
name = "jwt"
version = "0.1.0"
authors = ["SaltyAom <aomkirby@mystiar.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.1"
actix-web = "2.0.0"
actix-http = "1.0.1"
actix-files = "0.2.1"
actix-session = "0.3.0"
actix-utils = "1.0.6"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.53"
jsonwebtoken = "7"